# IPP26-proj

./: Containerfile  README.md  package-lock.json  package.json
int/: .gitignore  mypy  pyproject.toml  requirements-dev.txt  requirements.txt  ruff  test.xml
int/src/: solint.py
int/src/interpreter/: context.py  environment.py  error_codes.py  exceptions.py  input_model.py  interpreter.py  runtime.py
sol2xml/: README.md  example.sol
tester/: .gitignore  README.md  eslint  eslint.config.mjs  package-lock.json  package.json  prettier.config.mjs  tsconfig.json
tester/sol2xml/: parser_output_schema.xsd  requirements.txt  sol_to_xml.py
tester/src/: models.ts  tester.ts
tester/testdata/: ambiguous_interpret_only_sol.test  assign_to_parameter.test  attribute_method_collision.test  attribute_set_get.test  block_value_0.test  block_value_1.test  block_value_2.test  block_wrong_arity_call.test  boolean_if_true_false.test  boolean_short_circuit_and.test  class_from_integer.test  closure_capture.test  closure_mutation.test  combined_empty_output.test  division_by_zero.test  dnu_missing_message.test  duplicate_class.test  from_bad_argument.test  inheritance.test  inheritance_override.test  integer_div.test  integer_plus.test  integer_times_repeat.test  loop_times.test  malformed_duplicate_category.test  malformed_missing_points.test  method_arity_mismatch.test  minimal_main.test  missing_main.test  missing_run.test  object_identity_and_equality.test  output_diff_should_fail.test  print_ok.test  read_and_concat.test  read_echo.test  self_attribute_in_method.test  simple.test  sol_syntax_error_bad_message.test  sol_syntax_error_missing_brace.test  string_as_integer_nil.test  (+15 more)
